--- a/style.css
+++ b/style.css
@@ -11,3 +11,18 @@ body{
 #transaction{
     display: none;;
 }
+.deposit{
+    background-color: slateblue;
+}
+.withdraw{
+    background-color: lightsalmon;
+}
+.balance{
+    background-color: orange;
+}
+.status{
+    margin:  20px;
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
+}
